# test_system

./: README.md  dbexport.pgsql  meson.build
sql/: create.sql  insert.sql
src/: compile_commands.json  example.cpp  group_manager.cpp  group_manager.hpp  json_test.cpp  main.cpp  registration_group.cpp  registration_group.hpp  registration_state.cpp  registration_state.hpp  result_group.cpp  result_group.hpp  test.json  test_group.cpp  test_group.hpp
src/.cache/clangd/index/: group_manager.cpp.B61229AEA7C7AD89.idx  group_manager.hpp.64D0A51CA37A4A4A.idx  json.hpp.E0253A3716F083DD.idx  main.cpp.3A5212D497840A0C.idx  registration_group.cpp.F784B4073E2AFB34.idx  registration_group.hpp.B4128781370525CF.idx  result_group.cpp.707FD4B1052074AE.idx  result_group.hpp.14C7782CB5C1A1C7.idx  test_group.cpp.16AF04B31530BC2A.idx  test_group.hpp.6727D77AE7D53D14.idx
tests/: test.json
